pyvisa (1.9.1-2) UNRELEASED; urgency=medium

  * Use debhelper-compat instead of debian/compat.

 -- Ondřej Nový <onovy@debian.org>  Fri, 19 Jul 2019 23:55:13 +0200

pyvisa (1.9.1-1) unstable; urgency=medium

  * New upstream release
    - Drop patch
  * debian/upstream/metadata added pointing to github

 -- Ruben Undheim <ruben.undheim@gmail.com>  Sun, 19 Aug 2018 22:22:03 +0200

pyvisa (1.9.0-1) unstable; urgency=medium

  * New upstream release

  [ Ondřej Nový ]
  * debian/control: Set Vcs-* to salsa.debian.org
  * debian/copyright: Use https protocol in Format field
  * debian/control: Deprecating priority extra as per policy 4.0.1
  * debian/changelog: Remove trailing whitespaces
  * debian/control: Remove ancient X-Python3-Version field

  [ Ruben Undheim ]
  * Updated homepage URL, watch URL and source url in debian/copyright
  * debian/copyright: Updates according to changes in new release
  * debian/compat: compat level set to 11
  * debian/control:
    - debhelper >= 11
    - Standards version 4.2.0
  * Deleted debian/.git-dpm
  * debian/patches/0001-fix-build.patch:
    - Fix an issue popping up when building on latest sid

 -- Ruben Undheim <ruben.undheim@gmail.com>  Sun, 05 Aug 2018 21:12:47 +0200

pyvisa (1.8-4) unstable; urgency=low

  * Moved python-pyvisa-py back from Depends to Recommends. (Closes: #836963)
    This fixes a circular dependency issue.

 -- Ruben Undheim <ruben.undheim@gmail.com>  Thu, 22 Sep 2016 19:22:55 +0200

pyvisa (1.8-3) unstable; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URL (https)

  [ Ruben Undheim ]
  * debian/control:
    - Move libvisa0 from Depends to Suggests
    - Move python-pyvisa-py from Recommends to Depends
    - New Standards version 3.9.8

 -- Ruben Undheim <ruben.undheim@gmail.com>  Sat, 27 Aug 2016 10:41:27 +0200

pyvisa (1.8-2) unstable; urgency=low

  * debian/control:
    - Recommend pyvisa-py
    - Small improvement of package description
