@@ -1,3 +1,0 @@
-usr/lib/python2*/
-docs/*.rst usr/share/doc/python-pyvisa/manual/rst
-docs/api/*.rst usr/share/doc/python-pyvisa/manual/rst/api
