@@ -1,8 +1,12 @@
 pyvisa (1.9.1-2) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * Use debhelper-compat instead of debian/compat.
 
- -- Ondřej Nový <onovy@debian.org>  Fri, 19 Jul 2019 23:55:13 +0200
+  [ Sandro Tosi ]
+  * Remove Python 2 support; Closes: #938296
+
+ -- Sandro Tosi <morph@debian.org>  Sun, 08 Sep 2019 23:50:42 -0400
 
 pyvisa (1.9.1-1) unstable; urgency=medium
 
